--- a/ReproductorAccesibleOZPlayerHTML5.html
+++ b/ReproductorAccesibleOZPlayerHTML5.html
@@ -8,29 +8,28 @@
 </header>
 
 <body>
-<!-- This section is per video -->
-<figure id="ozplayer-1-container" class="ozplayer-container">
-<div  data-responsive="ozplayer-1-container" data-controls="stack" class="ozplayer" id="ozplayer-1" data-transcript="ozplayer-1-transcript" >
-<video  controls="controls" preload="none">
-<source src="https://www.youtube.com/watch?v=k1wLvUeAKFY" type="video/x-youtube"/>
-<track src="https://raw.githubusercontent.com/afrikiudl/CursGencat2023_videoAccessibleOzPlayer/main/Nova%20L9VTT.vtt" kind="captions" srclang="ca" default="default" />
-<div class="ozplayer-fallback"><ul><li><a href="https://www.youtube.com/watch?v=k1wLvUeAKFY">Video for playback</a></li></ul></div>
-</video>
-<audio data-default="default" preload="none">
-<source src="https://github.com/afrikiudl/CursGencat2023_videoAccessibleOzPlayer/raw/main/liniaL9_voicemaker.in-speech.mp3" type="audio/mp3" />
-</audio>
-</div>
-<details class="ozplayer-expander" open="open">
-<summary>Video Transcript</summary>
-<div id="ozplayer-1-transcript" class="ozplayer-transcript"></div>
-</details>
-</figure>
+    <figure id="ozplayer-1-container" class="ozplayer-container">
+        <div  data-responsive="ozplayer-1-container" data-controls="stack" class="ozplayer" id="ozplayer-1" data-transcript="ozplayer-1-transcript" >
+        <video  controls="controls" preload="none">
+        <source src="https://www.youtube.com/watch?v=k1wLvUeAKFY" type="video/x-youtube"/>
+        <track src="https://raw.githubusercontent.com/afrikiudl/CursGencat2023_videoAccessibleOzPlayer/main/Nova%20L9VTT.vtt" kind="captions" srclang="en" default="default" />
+        <div class="ozplayer-fallback"><ul><li><a href="https://www.youtube.com/watch?v=k1wLvUeAKFY">Video for playback</a></li></ul></div>
+        </video>
+        <audio data-default="default" preload="none">
+        <source src="https://github.com/afrikiudl/CursGencat2023_videoAccessibleOzPlayer/raw/main/liniaL9_voicemaker.in-speech.mp3" type="audio/mp3" />
+        </audio>
+        </div>
+        <details class="ozplayer-expander" open="open">
+        <summary>Video Transcript</summary>
+        <div id="ozplayer-1-transcript" class="ozplayer-transcript"></div>
+        </details>
+        </figure>
+        
 
 <!-- This section is once per page, but after all the videos -->
 <script type="text/javascript" src="https://ozplayer.global.ssl.fastly.net/3.5/ozplayer-core/ozplayer.free.js"></script>
-<script type="text/javascript" src="https://ozplayer.global.ssl.fastly.net/3.5/ozplayer-lang/ca.js"></script>
+<script type="text/javascript" src="https://ozplayer.global.ssl.fastly.net/3.5/ozplayer-lang/en.js"></script>
 <script type="text/javascript" src="https://ozplayer.global.ssl.fastly.net/3.5/config.js"></script>
-
 </body>
 
 </html>
