--- a/ReproductorAccesibleOZPlayerHTML5.html
+++ b/ReproductorAccesibleOZPlayerHTML5.html
@@ -12,7 +12,7 @@
         <div  data-responsive="ozplayer-1-container" data-controls="stack" class="ozplayer" id="ozplayer-1" data-transcript="ozplayer-1-transcript" >
         <video  controls="controls" preload="none">
         <source src="https://www.youtube.com/watch?v=k1wLvUeAKFY" type="video/x-youtube"/>
-        <track src="https://raw.githubusercontent.com/afrikiudl/CursGencat2023_videoAccessibleOzPlayer/main/Nova%20L9VTT.vtt" kind="captions" srclang="en" default="default" />
+        <track src="https://raw.githubusercontent.com/afrikiudl/CursGencat2023_videoAccessibleOzPlayer/main/NovaL9VTT.vtt" kind="captions" srclang="en" default="default" />
         <div class="ozplayer-fallback"><ul><li><a href="https://www.youtube.com/watch?v=k1wLvUeAKFY">Video for playback</a></li></ul></div>
         </video>
         <audio data-default="default" preload="none">
